Two tiny errors fixed in simple.el: making simple.el instead of simple.org the current buffer to act on, and calling iorg-initialize-simple-handler without argument. Now it works ;)

--- a/simple/simple.org
+++ b/simple/simple.org
@@ -1,6 +1,11 @@
 #+Title: A simple example Org-mode file
 
-* TODO This file has a top level heading                                :bar:
+* DONE This file has a top level heading                                :bar:
+  CLOSED: [2012-06-07 Do 18:59]
+  :LOGBOOK:
+  - State "TODO"       from "DONE"       [2012-06-07 Do 18:58]
+  - State "DONE"       from "TODO"       [2012-06-07 Do 18:57]
+  :END:
    :PROPERTIES:
   :iorg-property: foo
   :END:
