tiny change TASKS.

--- a/TASKS.org
+++ b/TASKS.org
@@ -948,7 +948,8 @@ Deleted, is a special case of 'take action on selected task'
 ** Bugpile Implementation
 *** TODO Implement simple.el
     DEADLINE: <2012-06-11 Mo>
-**** DONE Serve simple.org to html using elnode and org-export
+****
+DONE Serve simple.org to html using elnode and org-export
      CLOSED: [2012-06-07 Do 09:30] DEADLINE: <2012-06-05 Tue>
      :LOGBOOK:
      - State "DONE"       from "TODO"       [2012-06-07 Do 09:30]
@@ -969,7 +970,7 @@ as a response.
      CLOSED: [2012-06-07 Do 19:15] DEADLINE: <2012-06-06 Wed>
      :LOGBOOK:
      - State "DONE"       from "NEXT"       [2012-06-07 Do 19:15]
-     CLOCK: [2012-06-07 Do 09:39]
+     CLOCK: [2012-06-07 Do 09:39]--[2012-06-07 Do 19:39] => 10:00
      :END:
 
 **** TODO Change a property using the web interface
@@ -978,8 +979,11 @@ as a response.
 **** TODO Change a tag using the web interface
      DEADLINE: <2012-06-07 Thu>
 
-**** TODO Change headline body text using the web interface
+**** NEXT Change headline body text using the web interface
      DEADLINE: <2012-06-08 Fri>
+     :LOGBOOK:
+     CLOCK: [2012-06-07 Do 22:31]
+     :END:
 
 ** Bugpile Design
 *** TODO Design Bugreport
