--- a/simple/simple.org
+++ b/simple/simple.org
@@ -1,12 +1,7 @@
 #+Title: A simple example Org-mode file
 
-* DONE This file has a top level heading                                :bar:
-  CLOSED: [2012-06-07 Do 18:59]
-  :LOGBOOK:
-  - State "TODO"       from "DONE"       [2012-06-07 Do 18:58]
-  - State "DONE"       from "TODO"       [2012-06-07 Do 18:57]
-  :END:
-   :PROPERTIES:
+* TODO This file has a top level heading                                :bar:
+  :PROPERTIES:
   :iorg-property: foo
   :END:
 
