Content of headlines (entries) is exported as sections. Added HTML textarea markup to section exporter. TODO: insert the raw entry content in Org syntax, not the HTML transcoded content. Select-box and textfield for todos and tags already nicely shown in simple.html.

--- a/simple/simple.org
+++ b/simple/simple.org
@@ -1,6 +1,6 @@
 #+Title: A simple example Org-mode file
 
-* TODO This file has a top level heading                                :bar: # #
+* TODO This file has a top level heading                                :bar:
   :PROPERTIES:
   :iorg-property: foo
   :END:
