iOrg files renamed (prefix org-iorg-...). The static html-formatting of a headline from org-e-html.el copied and incorporated into org-iorg-export.el. Now the headline formatting looks OK in html, all the html-fields appear inside of the html-form. The content formatting needs improvement though.

--- a/simple/simple.org
+++ b/simple/simple.org
@@ -1,8 +1,10 @@
 #+Title: A simple example Org-mode file
 
-* TODO This file has a top level heading                                :bar:
+* TODO This file has a top level heading                           :iorg:bar:
   :PROPERTIES:
   :iorg-property: foo
+  :html-form:     http://localhost:8000/make-me-interactive-html
+  :html-button-value: Send edits
   :END:
 
 This heading has five components.  Lets see if we can edit all five
